tests/snapshots/run_wpt_conformance__coreml_batchNormalization_options_axis_0___gelu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js batchNormalization options.axis=0 + gelu, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML batchNormalization requires mean parameter to be a constant tensor, not a graph input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f32[3, 1, 2];
    bnMean: f32[3];
    bnVariance: f32[3];
  }

  nodes {
    [operand_3] = batchNormalization(bnInput, bnMean, bnVariance, axis=0, bias=null, epsilon=0.00001, label="", scale=null);
    [output] = gelu(operand_3, label="");
  }

  outputs { output; }
}
